tests-integration/fixtures/checking/251_prim_row_nub_union_class_constraint/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
unsafeCoerce :: forall (a :: Type) (b :: Type). (a :: Type) -> (b :: Type)
consume ::
  forall (given :: Row Type) (given_ :: Row Type).
    Union @Type (given :: Row Type) (given_ :: Row Type) Required =>
    {| (given :: Row Type) } -> String
merge ::
  forall (r1 :: Row Type) (r2 :: Row Type) (r3 :: Row Type) (r4 :: Row Type).
    Union @Type (r1 :: Row Type) (r2 :: Row Type) (r3 :: Row Type) =>
    Nub @Type (r3 :: Row Type) (r4 :: Row Type) =>
    {| (r1 :: Row Type) } -> {| (r2 :: Row Type) } -> {| (r4 :: Row Type) }
collect :: forall (@a :: Type). Collect (a :: Type) => (a :: Type) -> Array String
combine ::
  forall (partial :: Row Type) (duplicated :: Row Type) (deduped :: Row Type) (deduped_ :: Row Type)
    (items :: Type).
    Collect (items :: Type) =>
    Union @Type ( key :: String ) (partial :: Row Type) (duplicated :: Row Type) =>
    Nub @Type ( key :: String | (partial :: Row Type) ) (deduped :: Row Type) =>
    Union @Type (deduped :: Row Type) (deduped_ :: Row Type) Required =>
    {| (partial :: Row Type) } -> (items :: Type) -> String
combine' :: forall (items :: Type). Collect (items :: Type) => (items :: Type) -> String
repro :: String

Types
Required :: Row Type
Collect :: Type -> Constraint

Synonyms
type Required = ( key :: String )

Classes
class forall (a :: Type). Collect (a :: Type)
  collect :: forall (@a :: Type). Collect (a :: Type) => (a :: Type) -> Array String

Instances
instance Collect (Array String)

Diagnostics
error[NoInstanceFound]: No instance found for: Nub @Type ?28 (t20 :: Row Type)
  --> 30:1..38:12
   |
30 | combine
   | ^~~~~~~
error[NoInstanceFound]: No instance found for: Union @Type ( key :: String ) ?37 Required
  --> 44:1..44:59
   |
44 | combine' :: forall items. Collect items => items -> String
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: Union @Type ( key :: String ) ?45 Required
  --> 47:1..47:16
   |
47 | repro :: String
   | ^~~~~~~~~~~~~~~
